--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ header a {
   margin: 0 auto;
 }
 
+/* homepage */
 .home {
   display: grid;
   grid-template-columns: 3fr 1fr;
@@ -65,6 +66,8 @@ header a {
   border-radius: 50%;
   color: #333;
 }
+
+/* new workout form */
 label,
 input {
   display: block;
@@ -95,7 +98,6 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
-
 input.error {
   border: 1px solid var(--error);
 }
@@ -108,6 +110,17 @@ nav {
 nav a {
   margin-left: 10px;
 }
+nav button {
+  background: #fff;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-family: "Poppins";
+  cursor: pointer;
+  font-size: 1em;
+}
+
 /* auth forms */
 form.signup,
 form.login {
